--- a/EMPCO/project_parameters_template.json
+++ b/EMPCO/project_parameters_template.json
@@ -1,14 +1,31 @@
 {
-  "project_name": "[PROJECT NAME - Enter your project name here]",
-  "description": "[PROJECT DESCRIPTION - Brief description of the analysis scope]",
-  "slope_angles": [15, 20, 25, 30, 35, 40, 45],
-  "slope_heights": [20, 30, 40, 50, 60, 80, 100],
+  "project_name": "EMPCO Default Analysis",
+  "description": "Standard parametric slope stability analysis",
+  "slope_angles": [
+    15,
+    20,
+    25,
+    30,
+    35,
+    40,
+    45
+  ],
+  "slope_heights": [
+    20,
+    30,
+    40,
+    50,
+    60,
+    80,
+    100
+  ],
   "soil_scenarios": [
     {
       "name": "Weak Soil Scenario",
+      "description": "Low strength soils requiring detailed analysis",
       "layers": [
         {
-          "name": "Weak Clay",
+          "name": "Slope Material",
           "unit_weight": 115,
           "cohesion_total": 100,
           "cohesion_effective": 50,
@@ -16,7 +33,7 @@
           "thickness": 20
         },
         {
-          "name": "Medium Soil",
+          "name": "Foundation Material",
           "unit_weight": 120,
           "cohesion_total": 200,
           "cohesion_effective": 100,
@@ -27,9 +44,10 @@
     },
     {
       "name": "Medium Soil Scenario",
+      "description": "Moderate strength soils with typical properties",
       "layers": [
         {
-          "name": "Medium Clay",
+          "name": "Slope Material",
           "unit_weight": 120,
           "cohesion_total": 200,
           "cohesion_effective": 100,
@@ -37,7 +55,7 @@
           "thickness": 20
         },
         {
-          "name": "Dense Soil",
+          "name": "Foundation Material",
           "unit_weight": 125,
           "cohesion_total": 400,
           "cohesion_effective": 200,
@@ -48,9 +66,10 @@
     },
     {
       "name": "Strong Soil Scenario",
+      "description": "High strength soils with good stability characteristics",
       "layers": [
         {
-          "name": "Dense Clay",
+          "name": "Slope Material",
           "unit_weight": 125,
           "cohesion_total": 400,
           "cohesion_effective": 200,
@@ -58,7 +77,7 @@
           "thickness": 20
         },
         {
-          "name": "Rock",
+          "name": "Foundation Material",
           "unit_weight": 130,
           "cohesion_total": 1000,
           "cohesion_effective": 500,
@@ -68,14 +87,66 @@
       ]
     }
   ],
-  "pipe_outside_diameters": [16, 20, 24, 30, 36],
-  "pipe_wall_thicknesses": [0.375, 0.5, 0.625, 0.75],
-  "pipe_grades": ["X-52", "X-60", "X-65", "X-70"],
-  "pipe_smys_values": [52000, 60000, 65000, 70000],
-  "pipe_depths_of_cover": [4, 6, 8, 10, 12, 15],
-  "pipe_lengths_in_pgd": [5, 10, 15, 20, 30, 50],
-  "pipe_coatings": ["FBE", "3LPE", "Concrete", "Tape"],
-  "internal_pressures": [1000, 1200, 1440, 1600],
-  "pgd_paths": ["perpendicular", "parallel"],
-  "groundwater_ratios": [0.5, 0.7, 0.9]
+  "pipe_outside_diameters": [
+    16,
+    20,
+    24,
+    30,
+    36
+  ],
+  "pipe_wall_thicknesses": [
+    0.375,
+    0.5,
+    0.625,
+    0.75
+  ],
+  "pipe_grades": [
+    "X-52",
+    "X-60",
+    "X-65",
+    "X-70"
+  ],
+  "pipe_smys_values": [
+    52000,
+    60000,
+    65000,
+    70000
+  ],
+  "pipe_depths_of_cover": [
+    4,
+    6,
+    8,
+    10,
+    12,
+    15
+  ],
+  "pipe_lengths_in_pgd": [
+    5,
+    10,
+    15,
+    20,
+    30,
+    50
+  ],
+  "pipe_coatings": [
+    "FBE",
+    "3LPE",
+    "Concrete",
+    "Tape"
+  ],
+  "internal_pressures": [
+    1000,
+    1200,
+    1440,
+    1600
+  ],
+  "pgd_paths": [
+    "perpendicular",
+    "parallel"
+  ],
+  "groundwater_ratios": [
+    0.5,
+    0.7,
+    0.9
+  ]
 }
